Ебля с CORS продолжается